--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,15 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "apollo-link-context": "^1.0.20",
+    "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
+    "@types/yup": "^0.29.11",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "enzyme": "^3.11.0"
   }
